Nouveau: Ensure that hover text is visible on Pending Invites group panel.
Fixes #8027.

git-svn-id: https://buddypress.svn.wordpress.org/trunk@12347 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-templates/bp-nouveau/sass/_nouveau_invites.scss
+++ b/src/bp-templates/bp-nouveau/sass/_nouveau_invites.scss
@@ -56,7 +56,6 @@
 			ul.group-inviters {
 				clear: both;
 				margin: 0;
-				overflow: hidden;
 
 				li {
 					border: 0;
